std-dive-logger-backend/std-dive-logger-analytics/manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: std-dive-logger-analytics-dev
    namespace: std-dive-logger
spec:
    replicas: 1
    selector:
        matchLabels:
            app: std-dive-logger-analytics-dev
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            labels:
                app: std-dive-logger-analytics-dev
            annotations:
                prometheus.io/scrape: "true"
                prometheus.io/path: "/actuator/prometheus"
                prometheus.io/port: "8087"
        spec:
            nodeSelector:
                "kubernetes.io/os": linux
                "kubernetes.io/arch": amd64
            affinity:
                podAntiAffinity:
                    preferredDuringSchedulingIgnoredDuringExecution:
                        -   weight: 10
                            podAffinityTerm:
                                labelSelector:
                                    matchExpressions:
                                        -   key: app
                                            operator: In
                                            values:
                                                - std-dive-logger-analytics-dev
                                topologyKey: topology.kubernetes.io/zone
                        -   weight: 50
                            podAffinityTerm:
                                labelSelector:
                                    matchExpressions:
                                        -   key: app
                                            operator: In
                                            values:
                                                - std-dive-logger-analytics-dev
                                topologyKey: kubernetes.io/hostname
            containers:
                -   name: std-dive-logger-analytics-dev
                    image: hub.docker.come/std-dive-logger-analytics:PLACEHOLDER
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 5173
                    readinessProbe:
                        httpGet:
                            path: "/actuator/health/readiness"
                            port: 8087
                        failureThreshold: 2
                    livenessProbe:
                        httpGet:
                            path: "/actuator/health/liveness"
                            port: 8087
                        failureThreshold: 2
                    startupProbe:
                        httpGet:
                            path: "/actuator/health"
                            port: 8087
                        failureThreshold: 10
                        initialDelaySeconds: 10
                        periodSeconds: 10
                    resources:
                        requests:
                            cpu: 50m
                            memory: 512Mi
                        limits:
                            memory: 512Mi
                    volumeMounts:
                        -   name: config-volume
                            mountPath: /config/
                            readOnly: true
            imagePullSecrets:
                -   name: ub-acr-secret
            volumes:
                -   name: config-volume
                    configMap:
                        name: std-dive-logger-analytics-dev-config
                        items:
                            -   key: std-dive-logger-analytics-dev.properties
                                path: std-dive-logger-analytics-dev.properties
                            -   key: std-dive-logger-analytics-dev-logback.xml
                                path: std-dive-logger-analytics-dev-logback.xml
