std-dive-logger-backend/std-dive-logger-analytics/manifests/dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: std-dive-logger-analytics-dev
    namespace: std-dive-logger
spec:
    type: ClusterIP
    ports:
        -   port: 8080
    selector:
        app: std-dive-logger-analytics-dev
